--- a/_config.yml
+++ b/_config.yml
@@ -129,4 +129,6 @@ podcast:
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
-  type: ''
+  type: git
+  repo: git@github.com:rubiruby/yetanother-fm.git
+  branch: gh-pages
