--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: Yet Another
+title: Yet Another 又是一个
 subtitle: ''
 description: 「又是一个」又是一档有关于计算机科学、应用与八卦的播客节目
 keywords: [Yet Another, 又是一个, Podcast]
