--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "themes/hexo-theme-Nlvi"]
+[submodule "themes/Nlvi"]
 	path = themes/Nlvi
 	url = git@github.com:colmugx/hexo-theme-Nlvi.git
