--- a/_config.yml
+++ b/_config.yml
@@ -125,7 +125,7 @@ podcast:
   explicit: false
   description: 「又是一个」又是一档关于计算机科学、应用与八卦的播客节目。
   language: zh-CN
-  owner: Delton Ding
+  owner: Yet Another FM
   email: feedback@yetanother.fm
   category: Technology
 
