--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "hexo-generator-archive": "^1.0.0",
     "hexo-generator-category": "^1.0.0",
     "hexo-generator-index": "^1.0.0",
-    "hexo-generator-podcast": "^2.0.7",
+    "hexo-generator-podcast": "dsh0416/hexo-generator-podcast#master",
     "hexo-generator-tag": "^1.0.0",
     "hexo-renderer-ejs": "^1.0.0",
     "hexo-renderer-marked": "^2.0.0",
